# ros

./: README.md
localization/: REPORT.txt
localization/src/my_localization/: CMakeLists.txt  package.xml
localization/src/my_localization/launch/: amcl.launch.xml  gmapping.launch  gmapping.launch.xml  localization.launch
localization/src/my_localization/maps/: map.pgm
localization/src/my_localization/rviz/: gmapping_visualizer.rviz  localization_visualizer.rviz
odometry/: REPORT.txt
odometry/src/robot_tracker/: CMakeLists.txt  package.xml
odometry/src/robot_tracker/cfg/: parameters.cfg
odometry/src/robot_tracker/launch/: default.launch
odometry/src/robot_tracker/src/: SimpleRobot.h  main.cpp
odometry/src/robot_tracker/srv/: ResetPose.srv  SetPose.srv
